--- a/RaelEstateApi/Views/Home/Index.cshtml
+++ b/RaelEstateApi/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿<div id="body">
     <section class="featured">
+        <a href="~/RealEstate.html">Check out real estate web site</a>
         <div class="content-wrapper">
             <hgroup class="title">
                 <h1>Welcome to ASP.NET Web API!</h1>
