--- a/RaelEstateApi/Styles/main-styles.css
+++ b/RaelEstateApi/Styles/main-styles.css
@@ -1,7 +1,7 @@
-﻿#menu {
+﻿/*#menu {
 
 width:635px;
-}
+}*/
 
 #tb-logout {
 position:absolute;
@@ -10,10 +10,17 @@ left:500px;
 }
 
 #wrapper {
+    width: 80%;
+    margin: 0 auto;
+    background-color: #f3f3f3;
+/*position:absolute;*/
+/*top:20px;
+left:10%;*/
+}
 
-position:absolute;
-top:20px;
-left:200px;
+header{
+    margin-left: 15% !important;
+    width: 70% !important;
 }
 
 .account-info {
@@ -38,9 +45,6 @@ a:hover {
 }
 
 img {
-    width: 99%;
-}
-
-#myCarousel{
-    width: 500px;
+    width: 450px;
+    height: 250px;
 }
