some styling fixes

--- a/RaelEstateApi/Scripts/partials/single-advert.html
+++ b/RaelEstateApi/Scripts/partials/single-advert.html
@@ -4,22 +4,19 @@
 <script type="text/x-kendo-template" id="details-template">
     <div class="row-fluid">
         <h3 class="span12 text-center"> #= headline#</h3>
-        <span class="span12">
-            Town:
-            <span> #= town#</span>
-        </span>
-        <span class="span12">
-            Address:
-            <span> #= address#</span>
-        </span>
-        <span class="span12">
-            Price:
-            <span> #= price#</span>
-        </span>
-        <span class="span12">
-            Post Date:
-            <span> #= postDate#</span>
-        </span>
+        <address>
+                <strong>Town:</strong>
+                 #= town#
+            <br />
+            <strong>Address:</strong>
+                 #= address#
+            <br />
+            <strong>Price:</strong>
+                #= price#
+            <br />
+            <strong>Post Date:</strong>
+                #= postDate#
+        </address>
     </div>
     <div id="myCarousel" class="carousel slide row-fluid">
         <ol class="carousel-indicators">
