--- a/RaelEstateApi/Styles/main-styles.css
+++ b/RaelEstateApi/Styles/main-styles.css
@@ -10,21 +10,21 @@ left:500px;
 }
 
 #wrapper {
+    padding: 1%;
     width: 80%;
     margin: 0 auto;
     background-color: #f3f3f3;
+    min-height: 900px;
 /*position:absolute;*/
 /*top:20px;
 left:10%;*/
 }
 
-header{
-    margin-left: 15% !important;
-    width: 70% !important;
+header > h1{
+    width: 99% !important;
 }
 
 .account-info {
-
 padding:15px !important;
 }
 
