--- a/RaelEstateApi/Scripts/partials/login-form.html
+++ b/RaelEstateApi/Scripts/partials/login-form.html
@@ -4,8 +4,9 @@
 
         <li class="k-state-active">Log in</li>
         <li>Register</li>
+        <li><a href="#/adverts" class="btn btn-info" id="adverts-btn">View Adverts</a></li>
     </ul>
-    <a href="#/adverts" class="btn btn-info" id="adverts-btn">View Adverts</a>
+    
     <div id="login">
 
         <label for="tb-login-username">Username: </label>
