--- a/RaelEstateApi/Scripts/partials/adverts-list-with-logout.html
+++ b/RaelEstateApi/Scripts/partials/adverts-list-with-logout.html
@@ -1,6 +1,9 @@
 ﻿<!--<button class="btn btn-info" id="tb-logout" data-bind="click: logout">Logout</button>-->
 <h1 class="btn" id="accounts-headline">Estate Adverts</h1>
 <div class="btn-group">
+    <a class="btn btn-info" id="tb-logout" href="#/advertsadmin">
+    Admin
+</a>
     <a href="#/create">
         <button class="btn btn-info" id="tb-create">
             Create
@@ -9,6 +12,7 @@
     <button class="btn btn-info" id="tb-logout" data-bind="click: logout">
         Logout
     </button>
+
 </div>
 <ul id="menu" data-template="advert-template" class="nav nav-tabs nav-stacked" data-bind="source: adverts"></ul>
 
