--- a/RaelEstateApi/Scripts/partials/create-view.html
+++ b/RaelEstateApi/Scripts/partials/create-view.html
@@ -6,7 +6,7 @@
         <input type="text" id="tb-title" data-bind="value: headline"/>
         <br />
         <label for="tb-content">Content:</label>
-        <input type="text" id="tb-content" data-bind="value: text" />
+        <textarea id="tb-content" data-bind="value: text" />
         <br />
         <label for="tb-town">Town:</label>
         <input type="text" id="tb-town" data-bind="value: town" />
