display more info

--- a/RaelEstateApi/Scripts/partials/single-advert.html
+++ b/RaelEstateApi/Scripts/partials/single-advert.html
@@ -12,6 +12,10 @@
             Address:
             <span> #= address#</span>
         </span>
+       <span class="span12">
+            Details:
+            <span> #= text#</span>
+        </span>
         <span class="span12">
             Price:
             <span> #= price#</span>
