--- a/RaelEstateApi/Scripts/partials/adverts-list-with-logout.html
+++ b/RaelEstateApi/Scripts/partials/adverts-list-with-logout.html
@@ -1,7 +1,7 @@
 ﻿<!--<button class="btn btn-info" id="tb-logout" data-bind="click: logout">Logout</button>-->
 <h1 class="btn" id="accounts-headline">Estate Adverts</h1>
 <div class="btn-group">
-    <a class="btn btn-info" id="tb-logout" href="#/advertsadmin">
+    <a class="btn btn-info" id="tb-logout" href="#/admin">
     Admin
 </a>
     <a href="#/create">
