--- a/RaelEstateApi/Scripts/partials/admin.html
+++ b/RaelEstateApi/Scripts/partials/admin.html
@@ -29,12 +29,12 @@
                 transport: {
                     read: {
                         //url: "http://demos.kendoui.com/service/Northwind.svc/Employees",
-                        url: "http://localhost:38338/api/adverts/",
+                        url: "http://neodymiumestates.apphb.com/api/adverts/",
                         dataType: "json"
                     },
                     update: {
                         //url: "http://demos.kendoui.com/service/Northwind.svc/Employees",
-                        url: "http://localhost:38338/api/adverts/",
+                        url: "http://neodymiumestates.apphb.com/api/adverts/",
                         dataType: "json"
                     }
                 },
